# dafeng-wubi

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  DESIGN.md  LICENSE  NOTICE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
apps/inspector/: Package.swift  build-app.sh
apps/inspector/Sources/DafengInspector/: ContentView.swift  DafengCLI.swift  DafengInspectorApp.swift  HistoryStore.swift  HistoryView.swift  LearnedDict.swift  LearnedDictView.swift  MenuBarContent.swift  MenuBarController.swift  StatsView.swift
cmake/: DafengCompilerFlags.cmake
docs/: cheat-sheet.md  phase-2-summary.md  phase-2.1-verification.md  phase-2.2.md  phase-2.4.md  phase-3-roadmap.md  phase-3.2.md  phase-3.3.md  phase-3.4.md  phase-3.5.md  release-process.md  vs-vanilla-rime.md
include/dafeng/: api.h  client.h  client_c.h  endpoint.h  logging.h  paths.h  protocol.h  types.h
packaging/homebrew/: dafeng-wubi.rb
packaging/macos/: build-pkg.sh  com.dafeng.daemon.plist  deploy.sh  install_launchagent.sh
schemas/: dafeng_learned.dict.yaml  wubi86_dafeng.dict.yaml  wubi86_dafeng.schema.yaml
src/cli/: CMakeLists.txt  main.cc
src/client/: CMakeLists.txt  client.cc  client_c.cc
src/common/: CMakeLists.txt  endpoint_unix.cc  endpoint_win.cc  logging.cc  paths_mac.cc  paths_win.cc  protocol.cc
src/daemon/: CMakeLists.txt  auto_learn.cc  auto_learn.h  git_sync.cc  git_sync.h  git_sync_stub.cc  history_store.cc  history_store.h  learning_round.cc  learning_round.h  main.cc  mock_reranker.cc  new_word.cc  new_word.h  ngram.cc  ngram.h  reranker_deterministic.cc  reranker_llamacpp.cc  reranker_llamacpp_stub.cc  reranker_mlx.cc  reranker_mlx_stub.cc  server.cc  server.h  services.h  user_dict.cc  user_dict.h  wubi_codec.cc  wubi_codec.h
src/plugin/: CMakeLists.txt  dafeng_filter.lua  dafeng_lua_bridge.c  dafeng_rerank.lua  rime.lua
tests/: CMakeLists.txt  test_helpers.h
tests/benchmarks/: CMakeLists.txt  ipc_pingpong.cc  reranker_latency.cc
tests/integration/: CMakeLists.txt  client_daemon_test.cc  lua_bridge_test.cc
tests/unit/: CMakeLists.txt  auto_learn_test.cc  endpoint_test.cc  git_sync_test.cc  history_store_test.cc  learning_round_test.cc  logging_test.cc  mock_reranker_test.cc  new_word_test.cc  ngram_test.cc  protocol_test.cc  reranker_deterministic_test.cc  reranker_llamacpp_test.cc  user_dict_test.cc  wubi_codec_test.cc
tools/: download_model.py  rime_redeploy.sh
